# general-utils

./: .gitignore  README.md  config.yaml.example  pyproject.toml  requirements.txt  setup.sh
.gemini/: config.yaml
.github/workflows/: ci.yml
TranscribeAudio/: transcribe.py  transcribe_faster.py
TranscribeAudio/outputs/: Holy Bible Study ~ Holy Gospel According to St. Luke 1_39-56 by Bishop Youssef.txt
Youtube2MP3/: convert.py
gutils/: __init__.py  audio.py  dictation.py  image.py  main.py  pdf.py  tube.py
gutils/core/: __init__.py  config.py  io.py  logger.py
outputs/: AN AGE OF MADNESS.txt  Holy Bible Study ~ Holy Gospel According to St. Luke 1_26-38 by Bishop Youssef.txt  Holy Bible Study ~ Holy Gospel According to St. Luke 1_39-56 by Bishop Youssef.txt
tests/: README.md  __init__.py  conftest.py  test_audio.py  test_core.py  test_dictation.py  test_image.py  test_pdf.py  test_tube.py
tests/assets/: README.md
